--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   bloc: ^9.1.0
   flutter_bloc: ^9.1.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
